--- a/styles/style.css
+++ b/styles/style.css
@@ -13,4 +13,319 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--main-font), sans-serif;
+  font-weight: var(--main-card-font-weight);
+  max-inline-size: 700px;
+  background-color: var(--bg-color, rgba(255, 255, 255, 1));
+  background-image: var(--body-pattern);
+  background-size: 100dvw 100dvh;
+  background-repeat: no-repeat;
+  padding-block-start: 100px;
+  margin: auto;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid currentColor;
+  font-family: var(--accent-font);
+  background-color: var(--bg-color);
+  padding-block-start: clamp(7.5rem, 6.3462rem + 4.9231vw, 8.1rem);
+  padding-block-end: clamp(3rem, 3.5rem + 3.1vw, 6.3rem);
+  margin-block-end: 100px;
+}
+
+.header__logo {
+  font-size: clamp(3.0625rem, 1.9087rem + 4.9231vw, 4.0625rem);
+  font-weight: var(--font-weight-main);
+  line-height: 1;
+  text-transform: uppercase;
+  margin-block-end: 20px;
+  text-decoration: none;
+}
+
+.header__title {
+  margin-block-end: 25px;
+  font-size: clamp(0.875rem, 0.226rem + 2.7692vw, 1.4375rem);
+  font-weight: var(--font-weight-main);
+  line-height: 1;
+  text-transform: uppercase;
+}
+
+.card {
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+  margin-block-end: 50px;
+}
+
+.card__title {
+  background-color: var(--bg-color, #fff);
+  outline: 2px solid var(--accent-color, #000);
+  text-align: left;
+  width: 100%;
+  padding: 5px 0px 5px 10px;
+  font-family: Inter-Variable, sans-serif;
+  font-variation-settings: "wght" var(--card-title-font-weight);
+  font-size: 18px;
+  line-height: 21.78px;
+}
+
+.card__label {
+  position: absolute;
+  z-index: 1;
+  opacity: 0.5;
+  color: #000;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  text-shadow: 0 0 1px var(--text-stroke-color);
+  inset-block-start: 25px;
+  inset-inline-end: clamp(0.8125rem, 0.5484rem + 1.1268vw, 1.5625rem);
+  mix-blend-mode: hard-light;
+}
+
+@supports (-webkit-text-stroke: 1px var(--text-stroke-color)) or
+  (text-stroke: 1px var(--text-stroke-color)) {
+  .card__label {
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--text-stroke-color);
+    text-stroke: 1px var(--text-stroke-color);
+  }
+}
+
+.card__image {
+  display: block;
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.card__image_filter_grayscale {
+  filter: grayscale(80%);
+}
+
+.card__image_filter_saturate {
+  filter: saturate(5);
+}
+
+.card__image_filter_hue {
+  filter: hue-rotate(26deg);
+}
+
+.card__image_filter_invert {
+  filter: invert(0.8);
+}
+
+.card__image_filter_sepia {
+  filter: sepia(90%);
+}
+
+.card__image_filter_blur {
+  filter: blur(20px);
+}
+
+.card__image_filter_multiple {
+  filter: saturate(200%) invert(30%) hue-rotate(090deg) blur(2px) grayscale(10%);
+}
+
+.card__description {
+  padding: 27px 25px 25px 25px;
+}
+
+.card__description p {
+  color: var(--main-color, rgba(0, 0, 0, 1));
+  font-family: var(--main-font, sans-serif);
+  line-height: 21px;
+  font-size: 18px;
+  font-variation-settings: "wght" var(--main-card-font-weight, 400);
+  display: block;
+  text-align: start;
+}
+
+.card__description p:not(:last-child) {
+  margin-bottom: 27px;
+}
+
+.card__controls {
+  display: flex;
+  justify-content: end;
+  gap: 4px;
+  margin: 0 25px 25px 0;
+}
+
+.card__image-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.card__icon-button {
+  display: flex;
+  align-items: center;
+  border: none;
+  padding: 2px;
+  outline: 2px solid transparent;
+  background-color: transparent;
+  transition: 0.3s ease-in-out;
+  height: 32px;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--accent-color);
+}
+
+.card__like-button {
+  min-inline-size: 130px;
+}
+
+.like-icon {
+  background-color: transparent;
+  height: 38px;
+  margin-top: 4px;
+}
+
+.button {
+  position: relative;
+  padding: 11px 17px;
+  overflow: hidden;
+  border: 2px solid var(--main-color, rgba(0, 0, 0, 1));
+  background: var(--bg-color);
+  transition: box-shadow 0.3s ease;
+  cursor: pointer;
+  font-family: var(--accent-font, fantasy);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  color: var(--main-color, rgba(0, 0, 0, 1));
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: var(--main-color, #000);
+  transition: translate 0.5s ease-in-out;
+  translate: -100%;
+  z-index: 1;
+}
+
+.button_type_save {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-wrap: nowrap;
+  gap: 8px;
+  padding: 15px 21px 15px 19px;
+  margin-block-end: 50px;
+}
+
+.button:hover::before {
+  translate: 0%;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.button__text {
+  position: relative;
+  color: var(--accent-color);
+  z-index: 2;
+}
+
+.button:hover .button__text {
+  color: var(--bg-color);
+}
+
+.button_type_save svg {
+  position: relative;
+  z-index: 2;
+  transition: fill 0.3s ease;
+  width: 21px;
+  height: 21px;
+}
+
+.popup svg {
+  width: 39px;
+  height: 39px;
+}
+
+.footer-button svg rect {
+  fill: var(--accent-color);
+}
+
+.footer-button:hover svg rect {
+  fill: var(--bg-color) !important;
+}
+
+.popup {
+  inline-size: 357px;
+  border: 2px solid var(--accent-color);
+  padding: 30px;
+  color: var(--accent-color);
+  font-family: var(--accent-font), fantasy;
+  font-size: 14px;
+  background-color: var(--bg-color);
+}
+
+.popup[open] {
+  display: grid;
+  grid-template-columns: 0.3fr 1fr;
+  align-items: center;
+  gap: 30px 0px;
+}
+
+.popup[open]::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+
+.popup__controller {
+  grid-column: 1 / -1;
+}
+
+.popup__close-button {
+  width: 100%;
+}
+
+.popup__text {
+  font-size: 14px;
+  line-height: 1.5;
+  text-transform: uppercase;
+}
+
+.popup__button {
+  inline-size: 100%;
+  padding: 10px;
+  font-size: 14px;
+}
+
+.popup__icon {
+  inline-size: 39px;
+  block-size: 39px;
+}
+
+@media (width <= 375px) {
+  .popup {
+    inline-size: 100%;
+    padding: 30px 40px;
+  }
+
+  .button_type_save {
+    flex-direction: column;
+  }
 }
